# starship-catch-sim

./: .gitignore  .prettierignore  .prettierrc.json  ASSETS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.claude/: settings.json
.claude/hooks/: verify-change.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude.yml  deploy.yml
apps/web/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
docs/: dynamics.md  index.md  package.json  quick-start.md  rl-reward.md
docs/.vitepress/: config.mts  site.mjs  sync-report.mjs
docs/adr/: 001-tech-stack.md  002-6dof-and-3d-from-day-one.md  003-controller-interface.md  004-engine-agnostic-physics.md  005-community-assets-licence-policy.md  006-cascaded-pid-baseline.md  README.md  (+18 more)
services/mpc/: Dockerfile  package.json  pyproject.toml
services/mpc/src/mpc/: __init__.py  aero.py  coast.py  physics_consts.py  problem.py  scvx.py  server.py
services/mpc/tests/: test_coast.py  test_problem.py  test_scvx.py  test_server.py
services/rl/: README.md  pyproject.toml  rl_consts.json
services/rl/configs/: campaign-night1.yaml  campaign-night1b.yaml  campaign-night1c.yaml  campaign-night1c2.yaml  ppo-booster-il.yaml  ppo-booster-smoke.yaml  ppo-booster.yaml  sac-booster-il.yaml
services/rl/scripts/: bc_pretrain.py  campaign.py  collect_demos.py  eval_policy.py  export_policy.py  il_train.py  plot_learning.py  train_ppo.py
services/rl/src/rl/: ballistic.py  bc.py  cascade.py  consts.py  curriculum.py  dr.py  env.py  mathx.py  physics_np.py  wind_np.py
services/rl/tests/: test_cascade_inner_loop.py  test_dr_wind_curriculum.py  test_env.py  test_equivalence.py  test_fuel_gate.py
services/rl/tests/fixtures/: booster-depletion.json  booster-descent-a.json  booster-descent-b.json  booster-descent-c.json  ship-descent-a.json  ship-descent-b.json
tools/: gen-physics-consts.ts
(+168 files in other folders)
