[project]
name = "sls-mpc"
version = "0.1.0"
description = "Convex MPC guidance service for the Starship catch simulator (ADR-007)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "cvxpy>=1.6",
    "clarabel>=0.9",
    "ecos>=2.0",
    "numpy>=2.0",
    "pydantic>=2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mpc"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
