[project]
name = "sls-rl"
version = "0.1.0"
description = "RL environment + numpy physics port for the Starship catch simulator (SLS-28 / M6)"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.0",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rl"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
